// Copyright 2021 The Chromium Authors
// Use of this source code is governed by a BSD-style license that can be
// found in the LICENSE file.

syntax = "proto3";
option optimize_for = LITE_RUNTIME;
package profile_resolver;

// Used to support serializing enough information about a profile that it can
// be looked up at a later time.
message ProfileToken {
  // The relative path to the profile directory from the user data directory.
  string relative_path = 1;

  // If off the record, then may hold more identifying information. Will always
  // be non-empty for OTR profiles.
  string otr_profile_id = 2;
}
